Pre-release 3.1.3a1